# biblioUtils

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: general-context.md
docs/todo/: big-portal-update.md
occurenceCount/: key_count.py  keys_not_present.py
rust_crate/: Cargo.toml  pyproject.toml  rust_crate.pyi
rust_crate/src/: lib.rs  models.rs  transitive_closure.rs
src/ad_hoc/: create_dltc_cover_images.py  merge_dltc_issue_pdfs.ipynb  merge_dltc_issue_pdfs.py
src/bib_deps/: README.md  bib_deps_bootstrap.py  bib_deps_recursive.py  closed_deps_lookup.py  csv_repository.py  data_repository.py  filesystem_io.py  models.py
src/big_portal_update/: README.md  author_references_extractor.py  journal_references_extractor.py  pages_references_extractor.py  publisher_references_extractor.py  truncate_long_cells.py
src/crossref_doi_api/: .env.template  ENRICHMENT_README.md  README.md  api_test.py  batch_doi_registration.py  batch_doi_registration_enriched.py  bibliography_enrichment.py  check_doi.py  check_submission_status.py  csv_to_xml.py  metadata_json_parser.py  parse_submission_status.py  update_dois.py  update_dois_enriched.py  xml_parser_test.py
src/dltc_backcatalog/: crossref_gateway.py  dl.py  dltc-backcatalog-model.yaml  dltc-metadata.py  dltc-reconstructed.yaml  journal_issue.yaml  logic_types.py  yaml_repository.ipynb  yaml_repository.py
src/ref_pipe/: .env.template  README.md  bibkey_utils.py  compile_html.py  docker-compose.yml  filesystem_io.py  gen_md.py  generate_html.py  html_io.py  html_parse.ipynb  main.py  main_local.py  models.py  pipe.csl  prep_bib_hashmap.py  prep_divs.py  preprocessors.py  setup.py  utils.py
src/ref_pipe/prototypes/: apq.html  bib_polars.ipynb  html_parse.ipynb
src/ref_pipe/server/: upload_refs.rb
src/sdk/: MaybeMonad.py  ResultMonad.py  adapters.py  pipe.py  prototypes.ipynb  return_types.py  types.py  utils.py
src/spps_cover/: .env.example  README.md  alexandria_client.py  base_types.py  html_to_pdf.py  main.py  pdf_merge.py  template.py
src/utils/: add_depends_on_column.py  ascii_check.ipynb  author_references_bootstrap.py  bibkey_parser.ipynb  bibkey_utils.py  biblio_dependencies.py  biblio_dependencies_proto.ipynb  bibliography_to_metadata_json.py  dltc-web-postprocessor.ipynb  dltc-web-postprocessor.py  dltc_xmls.py  doi2bib  file_rename.py  find_duplicate_keys.py  gen_md_bibentries.py  inspect_ods.ipynb  journal_issues_to_metadata_json.py  md_bibkey_cleanup.py  md_direct_refs.py  mdbibkey-proto.ipynb  nameblock-replacement.py  nameblock_replacement.py  polars-proto.ipynb  references-postprocessor.ipynb  references-replacer.ipynb  references-replacer.py  reflexivity_check.ipynb  replace.py  replace_map_240903.py  replace_map_240909.py  substring_checker.py  substring_checker_v2.py  tex_to_utf_non_reversible.py  titlecase_constants.py  titlecase_philch.py  titlecase_wrapper.py  xml_analyze_tags.py
tests/: test_bib_deps_recursive.py  test_gen_md_bibentries.py  test_key_count.py  test_keys_not_present.py  test_md_direct_refs.py  test_pipe.py  test_rust_crate.py  test_substring_checker.py  test_substring_checker_v2.py  test_title_casing.py  test_titlecase_philch.py  test_titlecase_wrapper.py
titleCase/: title_case.py
utils/: keys_not_present.py  tex2utc.py  title_case.py  utc2tex.py
