[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "biblioUtils"
description = "Utilities for the management and improvement of the bibliography of Philosophie.ch"
version = "2024.1.0"
requires-python = ">=3.13"
readme = "README.md"
authors = [
  {name = "Luis Bordo", email = "luis.bordo@philosophie.ch"},
]
maintainers = [
  {name = "Luis Bordo", email = "luis.bordo@philosophie.ch"},
]

dependencies = [
  "titlecase",
  "pydantic",
  "requests", 
  "fuzzywuzzy",
  "python-Levenshtein",
  "python-dotenv",
  "beautifulsoup4",
  "TexSoup",
  "pylatexenc",
  "maturin",
  "mistune"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "black[jupyter]",
    "jupyter",
    "types-beautifulsoup4",
]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
exclude = [
    ".*/dwh.*/.*",
]

[[tool.mypy.overrides]]
module = [
    "titlecase",
    "titlecase_constants",
    "fuzzywuzzy",
    "TexSoup",
    "TexSoup.data",
    "pylatexenc",
    "pylatexenc.latex2text", 
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
skip-string-normalization = true
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''